--- a/front/web/css/admin.css
+++ b/front/web/css/admin.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 
-/* CORES DO SITE */
 :root {
   --font-family: 'CircularXX', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   --c1: linear-gradient(to right, rgb(180, 227, 241), rgb(75, 197, 235));
@@ -152,7 +151,7 @@ header button:hover {
   width: 70%;
   height: 12.6vh;
   display: flex;
-   font-size: 25px;
+  font-size: 25px;
   justify-content: space-around;
   align-items: center;
 }
@@ -305,7 +304,6 @@ header button:hover {
 }
 .section-fundo {
   position: relative;
-  
   width: 100%;
   min-height: 0;          
   margin: 40px 0;             
@@ -323,7 +321,6 @@ header button:hover {
 .fundo-svg {
   position: absolute;
   left: 0;
-  
   top: -16%;
   width: 200%;
   height: 150%;                
@@ -423,7 +420,6 @@ header button:hover {
   height: 20px;
 }
 
-
 .fundoparcial-content, .tosavet {
   position: relative;
   z-index: 1;
@@ -470,14 +466,12 @@ header button:hover {
         position: relative;
         top: 25%;left: -7%;
       }
-
     }
 }
 
 @media (max-width: 768px) {
   .tosavet {
     display: none; 
-
   }
 .h2 {
     width: 0;
@@ -554,7 +548,6 @@ header button:hover {
     top: -345px;left: 50%;
   }
 .imn{
-  
   img {
     width: 20vw;
     height: 37.1vh;
@@ -567,7 +560,6 @@ header button:hover {
     font-size: 10px;
     position: relative;
     top: -330px;left: 50%;
-  
   }
 }
 .petum button {
@@ -620,7 +612,6 @@ h4 {
   align-items: center;
   gap: 3%;
 }
-
     @media (max-width: 768px) {
       .video {
         position: relative;
@@ -651,14 +642,12 @@ h4 {
       justify-content: center;
       align-items: center;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
     }
      p{
       font-size: 15px;
       color: var(--c6);
       text-align: justify;
     }
-
     img{
       width: 20vw;
       height: 20vh;
@@ -926,7 +915,6 @@ h4 {
   position: relative;
   top: 0;left: -2%;
   display: flex;
-
   gap: 3%;
 }
 .prinm{
@@ -944,15 +932,12 @@ h4 {
       justify-content: center;
       align-items: center;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
     }
      p{
       font-size: 15px;
       color: var(--c6);
       text-align: justify;
     }
-
-
     img{
       width: 100%;
       height: 100%;
@@ -983,7 +968,6 @@ h5, p{
   text-align: justify;
   font-size: 15px;
   position: relative;
-  
 }
 .container-carrossel {
   position: relative;
@@ -1034,7 +1018,6 @@ h5, p{
       height: 6%;
       position: relative;
       top: 8px;left: 0px;
-      
     }
   }
 }
@@ -1048,14 +1031,11 @@ h5, p{
   cursor: pointer;
   border-radius: 50px;
 }
-
 .btn:hover {
   background: #555;
 }
 }
-
 @media (max-width: 768px) {
-
   header h1 {
     font-size: 22px;
   }
@@ -1075,7 +1055,6 @@ h5, p{
     transform: scale(0.9);
     transform-origin: top center;
   }
-
   .carousel,
   .mainContainer,
   .mainContainer-dup,
@@ -1083,27 +1062,22 @@ h5, p{
     width: 100%;
     left: 0;
   }
-
   img {
     max-width: 100%;
     height: auto;
   }
-
   h1, h2, h3, p, button {
     font-size: 90%;
   }
-
   .petum,
   .banho,
   .vet {
     overflow: hidden;
   }
-
   button {
     padding: 8px 12px;
   }
 }
-
 @media (max-width: 480px) {
   body {
     transform: scale(0.85);
@@ -1123,9 +1097,7 @@ h5, p{
         width: 100%;
         position: relative;
         top: -35vh;left: 0;
-        
-      }
-}  
+}}  
 @media (max-width: 768px) {
       .blog {
         width: 100%;
