--- a/front/web/css/confira.css
+++ b/front/web/css/confira.css
@@ -3,8 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-/* CORES DO SITE */
 :root {
   --font-family: 'CircularXX', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   --c1: linear-gradient(to right, rgb(180, 227, 241), rgb(75, 197, 235));
@@ -13,23 +11,20 @@
   --c3: rgb(75, 197, 235);
   --c6: rgba(0, 31, 71, 0.829);
   --c4: rgb(21, 23, 134);
-  --c5: rgb(136, 132, 132); /* COR DO TEXTO DOS BOTÕES */
+  --c5: rgb(136, 132, 132);
   --t1: rgba(80, 34, 74, 0.3);
   --t2: rgba(0, 0, 0, 0.7);
 }
-
-/* CORPO DA PÁGINA */
 body {
   width: 100%;
   font-family: Georgia, 'Times New Roman', Times, serif;
   margin: 0;
   padding: 0;
-  overflow-x: hidden; /* ESCONDE A ROLAGEM LATERAL */
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
 }
 
-/* CABEÇALHO UM */
 header {
   background: rgba(0, 31, 71, 0.158);
   
@@ -40,44 +35,42 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000; /* MANTÉM O CABEÇALHO ACIMA DOS OUTROS ITENS DO SITE */
-  justify-content: space-around; /* DISTRIBUI OS ITENS DO CABEÇALHO */
-  align-items: center; /* ALINHA OS ITENS DO CABEÇALHO */
+  z-index: 1000;
+  justify-content: space-around;
+  align-items: center;
 }
 
 header h1 {
     width: 50%;
   font-family: 'Brush Script MT', cursive;
   color: rgb(247, 223, 15);
-  font-size: 36.5px; /* TAMANHO DO TEXTO */
+  font-size: 36.5px;
   position: relative;
   justify-content: center;
   align-items: center;
   top: 0px;
-  left: 8%; /* POSIÇÃO DO TEXTO */
-  cursor: pointer; /* AO PASSAR O MOUSE EM CIMA DO TEXTO, VAI APARECER UMA MÃOZINHA */
+  left: 8%;
+  cursor: pointer;
 }
 
 header img {
-  width: 37px; /* TAMANHO DAS IMAGENS */
+  width: 37px;
   border: none;
 }
 
 header button {
   background-color: transparent;
   border: none;
-  color: rgb(255, 255, 255); /* COR DO TEXTO */
-  font-weight: bold; /* TEXTO EM NEGRITO */
-  cursor: pointer; /* AO PASSAR O MOUSE EM CIMA DOS BOTÕES, VAI APARECER UMA MÃOZINHA */
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  cursor: pointer;
 }
 
 header button:hover {
-  color: white; /* COR DO TEXTO AO PASSAR O MOUSE EM CIMA */
-  transition: 0.3s; /* TEMPO DA TRANSIÇÃO */
+  color: white;
+  transition: 0.3s;
   font-size: 1.8vh;
 }
-
-/* 🔹 QUANDO A TELA FOR PEQUENA, DIMINUI O TAMANHO DO TÍTULO */
 @media (max-width: 768px) {
   header h1 {
     width: 60%;
@@ -85,43 +78,36 @@ header button:hover {
   }
 }
 
-/* 🔹 QUANDO A TELA FOR PEQUENA, DIMINUI O TAMANHO DAS IMAGENS */
 @media (max-width: 768px) {
   header button img {
-    width: 25px; /* diminui o tamanho das imagens */
+    width: 25px;
   }
 }
-
-
-/* Estilo para a div de fundo */
 .fundo {
-    background-image: url('https://supertails.com/cdn/shop/articles/cat-vaccination222.jpg?v=1743074308'); /* Caminho para a imagem */
-    background-size: cover; /* Faz a imagem cobrir toda a tela */
+    background-image: url('https://supertails.com/cdn/shop/articles/cat-vaccination222.jpg?v=1743074308');
+    background-size: cover;
     position: relative;
     top: -95px;left: 0;
-    background-position: center; /* Centraliza a imagem */
-    background-repeat: no-repeat; /* Evita repetição */
-    width: 110vw; /* Largura total da viewport */
-    height: 90vh; /* Altura total da viewport */
+    background-position: center; 
+    background-repeat: no-repeat; 
+    width: 110vw; 
+    height: 90vh; 
     display: flex;
-    justify-content: center; /* Centraliza a div de texto */
-    align-items: center; /* Centraliza a div de texto verticalmente */
+    justify-content: center;
+    align-items: center; 
 }
 .text{
   width: 50%;
 }
-
-/* Estilo para a div com o texto */
 .texto {
     width: 50%;
     position: relative;
-    background-color: var(--c6); /* Fundo escuro semitransparente */
+    background-color: var(--c6);
     width: 150%;height: 100%;
     position: relative;
-    color: white; /* Cor do texto */
-    padding: 20px; /* Espaçamento interno */
-    text-align: center; /* Alinha o texto ao centro */
-
+    color: white;
+    padding: 20px; 
+    text-align: center; 
 
 & button{
   background: yellow;
@@ -130,25 +116,20 @@ header button:hover {
   position: relative;
   top: 330px;
   border-radius: 0 90px 0 90px;
-}
+}}
 
-  }
-
-/* Estilo para o título */
 .texto h1 {
   position: relative;
   top: 220px;left: 10%;
-    font-size: 3rem; /* Tamanho do título */
+    font-size: 3rem;
     margin: 0;
 }
-
-/* Estilo para o parágrafo */
 .texto p {
   width: 80%;
   text-align: justify;
   position: relative;
   top: 260px;left: 18%;
-    font-size: 1.2rem; /* Tamanho do parágrafo */
+    font-size: 1.2rem;
     margin-top: 10px;
 }
 .confira{
@@ -226,11 +207,7 @@ header button:hover {
     height: 2vh;
     position: relative;
     top: -5%;
-  }
-  }
-}
-
-
+  }}}
 .parcele{
   width: 80%;
   height: 70vh;
@@ -288,12 +265,7 @@ header button:hover {
     height: 2vh;
     position: relative;
     top: -5%;
-  }
-  }
-}
-
-
-
+}}}
 
 .frete{
   width: 80%;
@@ -346,12 +318,7 @@ header button:hover {
     height: 2vh;
     position: relative;
     top: -5%;
-  }
-  }
-}
-
-
-
+}}}
 
 .retire{
   width: 80%;
@@ -408,11 +375,7 @@ header button:hover {
     position: relative;
     top: -5%;
     text-align: justify;
-  }
-  }
-}
-
-
+}}}
 .troque{
   width: 80%;
   height: 70vh;
@@ -468,4 +431,3 @@ header button:hover {
   }
   }
 }
-
