--- a/front/web/css/adocao.css
+++ b/front/web/css/adocao.css
@@ -1,5 +1,3 @@
-
-
 *{
 margin: 0px;
 padding: 0px;
@@ -20,7 +18,7 @@ font-family:Georgia, 'Times New Roman', Times, serif;
 
   .container1 h1 {
     font-family:Georgia, 'Times New Roman', Times, serif;
-    color: #ffffff; /* bright blue */
+    color: #ffffff;
     text-transform: uppercase;
     letter-spacing: 0.15em;
     text-shadow:
