--- a/front/web/css/produtoscli.css
+++ b/front/web/css/produtoscli.css
@@ -90,3 +90,14 @@ background-color: #0077aa;
   font-weight: bold;
   color: #001faa;
 }
+.btn-comprar{
+  margin-top: 10px;
+  padding: 10px;
+  width: 100%;
+  background-color: #1c35a7;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+}
