--- a/front/web/css/index.css
+++ b/front/web/css/index.css
@@ -34,7 +34,7 @@ body {
 
 header {
   background: var(--c6);
-  color: black;
+  color: rgb(0, 0, 0);
   width: 100%;
   height: 85px;
   display: flex;
@@ -120,6 +120,10 @@ header button:hover {
   align-items: center;
 }
 
+#sair{
+  color: white;
+}
+
 .Containerheader button {
   width: 130px;
   border: none;
@@ -131,7 +135,7 @@ header button:hover {
   display: flex; 
   align-items: center;
   justify-content: center;
-  gap: 6px; 
+  gap: 6px;
 }
 
 .Containerheader button img {
