--- a/front/web/css/index.css
+++ b/front/web/css/index.css
@@ -71,7 +71,7 @@ header h1 {
   justify-content: center;
   align-items: center;
   top: 0px;
-  left: 20%; 
+  left: -33px; 
   cursor: pointer; 
 }
 
